--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-          Напишите о своих работах, что вы сделали
+          Бункер;Натюрморт
 
 
 
@@ -150,7 +150,7 @@
 
 
   
-      Описание
+      Убежище на случай войны или зомбиапокалипсиса
 
 
 
@@ -182,7 +182,7 @@
 
 
   
-      
+      Моделинг по референсу
 
 
 
