--- a/index.html
+++ b/index.html
@@ -280,21 +280,21 @@
     <div class="carousel-item green white-text formatter" href="#two!"><div class="title-container"><h2>
 
 
-      Название работы
+      Чайник
 
     
     </h2><p class="white-text">
 
 
   
-     Описание
+     Чай это все еще хорошо
 
 
 
       <!-- Чтобы поменять адрес просто замените непонятный набор букв после /models/... на тот что указан в адресной строке после /models/
         Но ?preload=1 должно остаться! -->
     </p></div>
-    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/     /embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
+    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/c3cccd24032c488e93f3f940901634b0/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
     <!-- Тут заканчивается шаблон для Sketchfab -->
 
 
